--- a/viseon/Viseon.Core.BusinessLayer/Viseon.Core.BusinessLayer.csproj
+++ b/viseon/Viseon.Core.BusinessLayer/Viseon.Core.BusinessLayer.csproj
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>134c9d49-d66c-4079-ae90-e1f693d58678</ProjectGuid>
+    <ProjectGuid>{134C9D49-D66C-4079-AE90-E1F693D58678}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Viseon.Core.BusinessLayer</RootNamespace>
@@ -30,24 +30,52 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="HtmlAgilityPack, Version=1.6.8.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.6.8\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessLayerBase.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="ExtensionMethods\HtmlExtensionMethods.cs" />
+    <Compile Include="Logic\OnPage\BuildOnPageModel.cs" />
+    <Compile Include="Logic\OnPage\GetElements.cs" />
+    <Compile Include="Logic\OnPage\OnPageLogic.cs" />
+    <Compile Include="Logic\RestClient\GetWebPage.cs" />
+    <Compile Include="Logic\RestClient\RestClientLogic.cs" />
+    <Compile Include="Logic\ViseonElements\BacklinkLogic.cs" />
+    <Compile Include="Logic\ViseonElements\MetaDescriptionLogic.cs" />
+    <Compile Include="Logic\ViseonElements\HeaderLogic.cs" />
+    <Compile Include="Logic\ViseonElements\ImageLogic.cs" />
+    <Compile Include="Logic\ViseonElements\MetaKeywordsLogic.cs" />
+    <Compile Include="Logic\ViseonElements\ParagraphLogic.cs" />
+    <Compile Include="Logic\ViseonElements\MetaTitleLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticData\ViseonStaticData.cs" />
+    <Compile Include="Util\MathUtil.cs" />
+    <Compile Include="Util\WordCountingUtil.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Viseon.Core.Contracts\Viseon.Core.Contracts.csproj">
+      <Project>{c9c0c9de-c0f5-4c3f-acb7-748c0686f21c}</Project>
+      <Name>Viseon.Core.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Viseon.Core.Models\Viseon.Core.Models.csproj">
+      <Project>{cd0aefd9-17e8-4be8-9d28-b15d5538080e}</Project>
+      <Name>Viseon.Core.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
- </Project>
+</Project>
