--- a/viseon/Viseon.Core.Models/Viseon.Core.Models.csproj
+++ b/viseon/Viseon.Core.Models/Viseon.Core.Models.csproj
@@ -40,9 +40,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContentElementBase.cs" />
+    <Compile Include="ElementBase.cs" />
+    <Compile Include="HeaderElementBase.cs" />
+    <Compile Include="MessageModel.cs" />
+    <Compile Include="MetaElementBase.cs" />
+    <Compile Include="ModelBase.cs" />
+    <Compile Include="ViseonBacklinkModel.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="ViseonDescriptionModel.cs" />
+    <Compile Include="ViseonHeaderModel.cs" />
+    <Compile Include="ViseonImageModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViseonKeywordModel.cs" />
     <Compile Include="ViseonOnPageModel.cs" />
+    <Compile Include="ViseonParagraphModel.cs" />
+    <Compile Include="ViseonTitleModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
