--- a/viseon/Viseon.Apps.MvcClient.Tests/packages.config
+++ b/viseon/Viseon.Apps.MvcClient.Tests/packages.config
@@ -4,7 +4,12 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="MicrosoftWebMvc" version="2.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.17" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.17" targetFramework="net461" />
+  <package id="Mvc2Futures" version="2.0.50217.0" targetFramework="net461" />
+  <package id="MvcContrib" version="2.0.95.0" targetFramework="net461" />
+  <package id="MvcContrib.TestHelper" version="2.0.95.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="RhinoMocks" version="3.6" targetFramework="net461" />
 </packages>
