--- a/viseon/Viseon.Apps.MvcClient/Viseon.Apps.MvcClient.csproj
+++ b/viseon/Viseon.Apps.MvcClient/Viseon.Apps.MvcClient.csproj
@@ -143,6 +143,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PartnerController.cs" />
     <Compile Include="Controllers\ResultController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
