added null handling on missing meta elements

--- a/viseon/Viseon.Apps.MvcClient/Viseon.Apps.MvcClient.csproj
+++ b/viseon/Viseon.Apps.MvcClient/Viseon.Apps.MvcClient.csproj
@@ -351,12 +351,13 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Result\Overview.cshtml" />
+    <Content Include="Views\Shared\Overview.cshtml" />
     <Content Include="Views\Shared\_LayoutDashboardUi.cshtml" />
     <Content Include="Views\Shared\_SearchForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Result\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
